update hardcodes values with constants

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1433,7 +1433,7 @@
         .style("font-size", "18px")
         .style("font-weight", "700")
         .style("line-height", "24px")
-        .text("2.40");
+        .text(lowestDiversityScore);
 
     svg.append("text")
         .attr("x", -radius + 67.5)
@@ -1464,7 +1464,7 @@
         .style("font-size", "18px")
         .style("font-weight", "700")
         .style("line-height", "24px")
-        .text("7.25");
+        .text(highestDiversityScore);
 
     svg.append("text")
         .attr("x", 172.5)
@@ -1485,8 +1485,9 @@
         .style("font-size", "18px")
         .style("font-weight", "700")
         .style("line-height", "24px")
-        .text("5.31");
+        .text(averageDiversityScore);
 
+    const hadzaAverageValue = document.getElementById('average-hadza-observed-average').innerText;
     svg.append("text")
         .attr("x", 110)
         .attr("y", -radius + 185)
@@ -1494,7 +1495,7 @@
         .style("font-size", "18px")
         .style("font-weight", "700")
         .style("line-height", "24px")
-        .text("6.30");
+        .text(hadzaAverageValue);
 
     svg.append("a")
         .attr("xlink:href", "https://www.nature.com/articles/d41586-023-02065-y")
