--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1196,7 +1196,8 @@
             };
             Plotly.newPlot("taxa-violin", data, layout, {displayModeBar: false});
         });
-        END BLOCK COMMENTED OUT WHILE TAXA VIOLIN IS HIDDEN */
+        END BLOCK COMMENTED OUT WHILE TAXA VIOLIN IS HIDDEN 
+        TEST */
     }
 
     function updateObservedAverages(state) {
