--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1608,3 +1608,126 @@ input.barcode-checkbox[type=checkbox]:checked+label {
         display: none;
     }
 }
+
+.boxplot-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.boxplot-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.boxplot-content {
+    position: relative;
+    background-color: #ffffff;
+    border-radius: 8px;
+    width: 614px;
+    height: 442px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    z-index: 10000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    color: #006A96;
+}
+
+.close-button:hover {
+    color: #ff0000;
+}
+
+.boxplot-content h4 {
+    margin-bottom: 15px;
+    color: #006A96;
+    font-size: 20px;
+}
+
+.boxplot-content p {
+    font-size: 14px;
+    color: #333;
+    max-width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.5;
+}
+
+#tooltip-boxplot {
+    width: 605px;
+    height: 223px;
+}
+
+#boxplot-container {
+    position: relative;
+}
+
+.info-icon-container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px; 
+}
+
+.info-circle {
+    width: 32px;
+    height: 32px;
+    background-color: #006A96;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.info-circle:hover {
+    background-color: #004e73;
+    transform: scale(1.1);
+}
+
+.info-icon-container a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.info-text {
+    font-size: 14px;
+    color: #006A96;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.info-text:hover {
+    color: #004e73;
+}
