--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1608,3 +1608,8 @@ input.barcode-checkbox[type=checkbox]:checked+label {
         display: none;
     }
 }
+
+#skin-color-chart {
+    max-width: 550px;
+    width: 80%;
+}
